<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">ContactExchange</string>
    <string name="facebook_app_id">417789055663411</string>
    <string name="fb_login_protocol_scheme">fb417789055663411</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">8bCeEbxcbDdPfJ4XJPwOtymip</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">1jFvlDbKifYn8eKroyuMFtIWhWetsihPTFWUV2knqogcFInBhG</string>

    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="sign_up">Sign up</string>

    <string name="title_cards">All cards</string>
    <string name="title_camera">Scan</string>
    <string name="title_qr_code">My code</string>

    <string name="twitter_name">Your Twitter @</string>
    <string name="instagram_name">Your Instagram name</string>
    <string name="btn_send">Send</string>

    <string name="setup_instruction">Add at least one social media</string>
    <string name="no_socials">You don\'t have social medias yet</string>
    <string name="no_cards">You don\'t have friends yet</string>

    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="change_name">Change your name</string>
    <string name="preferences">Preferences</string>
    <string name="day_night">Night mode</string>

    <string name="social_exchanger">Social Exchanger</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
